--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Studio Dragon</title>
+    <style>
+        h1{
+            color: aqua;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Studio Dragon</h1>
 </body>
 </html>
