--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>데브빙글빙글-새록-</p>
     <p>i want go home</p>
     <p>me too... so tired</p>
+    <p> 포켓몬스터 레전드 Z/A 10월 16일 발매</p>
 </body>
 </html>
