--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>i want go home</p>
     <p>me too... so tired</p>
     <p> 포켓몬스터 레전드 Z/A 10월 16일 발매</p>
+    <p><legend>kwon</legend></p>
 </body>
 </html>
