--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>me too... so tired</p>
     <p> 포켓몬스터 레전드 Z/A 10월 16일 발매</p>
     <p><legend>kwon</legend></p>
+    <p>이거 진짜 어렵네 아오씨</p>
 </body>
 </html>
