--- a/main_back.html
+++ b/main_back.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1111</title>
+    <title>스튜디오드래곤</title>
 </head>
 
 <body>
-    <p>sss</p>
-    <p>바꿈</p>
+    <p>스튜디오드래곤 메인</p>
 </body>
 
 </html>
