백_메인메타부분수정

--- a/main_beck.html
+++ b/main_beck.html
@@ -3,14 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="스튜디오 드래곤 홈페이지 입니다">
+    <meta name="keywords" content="스튜디오드래곤, 드라마, 제작사, 기획사, CJENM, TVN, 넷플릭스">
+    <meta name="author" content="100SJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1111</title>
+    <title>studiodragon</title>
 </head>
-
 <body>
-    <p>sss</p>
-    <p>바꿈</p>
-    <p>라라라랄라ㅏ라리리리ㅏ리</p>
+    <p>이제 시작!</p>
 </body>
-
 </html>
