meta 추가_description,keywords,author

--- a/viewer’splayground_moon.html
+++ b/viewer’splayground_moon.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="스튜디오드래곤의 Viewer’s Playground Page입니다. ">
+    <meta name="keywords" content="스튜디오드래곤, 드라마, 제작사, tvn, CJENM, 공모전, 팬 커뮤니티, 브랜드">
+    <meta name="author" content="Luna">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viewer’s Playground Page</title>
 </head>
