--- a/main_beck.html
+++ b/main_beck.html
@@ -8,6 +8,32 @@
     <meta name="author" content="100SJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>studiodragon</title>
+    <style>
+        :root {
+            --Wcolor: #F5F5F5;
+            --Bcolor: #0D031C;
+            --Bcolor-700: #4A4259;
+            --Bcolor-200: #C7C5CD;
+            --WF:#FFFFFF;
+            --subBlue2: #394199;
+            --subBlue1: #1A26AD;
+            --subRed2: #AA3229;
+            --subRed2-200: #F5D6D0;
+            --subRed2-900: #BD4033;
+            --subRed1: #B22318;
+            --MainColor: #BFA473;
+            --MainColor-400: #E5DAC6;
+            --MainColor-1400: #483D28;
+            --Gcolor: #A6A6A6;
+            --Gcolor-300: #E4E4E4;
+            --Gcolor-200: #EDEDED;
+            --WT-round-1: 32px; /* 1920 , 1024  */
+            --WT-round-2: 12px; /* 1920 , 1024 */
+            --WTP-round-3: 8px; /* 1920, 1024, 440 */
+            --P-round-1: 24px; /* 440 */
+            --my-shadow: 0px 0px 24px rgba(2, 8, 20, 0.4);
+        }
+    </style>
 </head>
 <body>
     <p>이제 시작!</p>
