--- a/IR.html
+++ b/IR.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IR</title>
+  <style></style>
 </head>
 <body>
   
