작품목록 메세지~

--- a/List of works_lee.html
+++ b/List of works_lee.html
@@ -4,11 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>워크</title>
+  <title>List of works</title>
 </head>
-<p>냐냐냐</p>
-<h2>안녕하세오~</h2>
-<h3>연습입니다!</h3>
 
 <body>
 
