--- a/main_beck.html
+++ b/main_beck.html
@@ -8,34 +8,41 @@
     <meta name="author" content="100SJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>studiodragon</title>
-    <style>
-        :root {
-            --Wcolor: #F5F5F5;
-            --Bcolor: #0D031C;
-            --Bcolor-700: #4A4259;
-            --Bcolor-200: #C7C5CD;
-            --WF:#FFFFFF;
-            --subBlue2: #394199;
-            --subBlue1: #1A26AD;
-            --subRed2: #AA3229;
-            --subRed2-200: #F5D6D0;
-            --subRed2-900: #BD4033;
-            --subRed1: #B22318;
-            --MainColor: #BFA473;
-            --MainColor-400: #E5DAC6;
-            --MainColor-1400: #483D28;
-            --Gcolor: #A6A6A6;
-            --Gcolor-300: #E4E4E4;
-            --Gcolor-200: #EDEDED;
-            --WT-round-1: 32px; /* 1920 , 1024  */
-            --WT-round-2: 12px; /* 1920 , 1024 */
-            --WTP-round-3: 8px; /* 1920, 1024, 440 */
-            --P-round-1: 24px; /* 440 */
-            --my-shadow: 0px 0px 24px rgba(2, 8, 20, 0.4);
-        }
-    </style>
+    <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="back/css/reset.css">
+    <link rel="stylesheet" href="back/css/MainBeck_style.css">
+    <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script scr="back/js/MainBack.js"></script>
 </head>
+
 <body>
-    <p>이제 시작!</p>
+    <div class="wrap">
+        <header>
+            <div class="inner">
+                <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">WORKS</a></li>
+                        <li><a href="#">NEWSROOM</a></li>
+                        <li><a href="#">IR</a></li>
+                        <li><a href="#">SUSTAINABILITY</a></li>
+                    </ul>
+                    <div class="right">
+                        <div class="lang">
+                            <a href="#"><div class="en">EN</div></a>
+                            <a href="#"><div class="kr">KR</div></a>
+                        </div>
+                        <div class="user">
+                            <a href="#"><img src="back/img/user.png" alt="user"></a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </header>
+    </div>
 </body>
+
 </html>
