--- a/Work_Ryu/work.html
+++ b/Work_Ryu/work.html
@@ -10,11 +10,11 @@
 <body>
     <div class="wrap">
         <header>
-            <div class="logo">
+            <h1 class="logo">
                 <a href="#">
                     <img src="/asset/Studio Dragon_symbol.svg" alt="logo">
                 </a>
-            </div><!-- //.logo -->
+            </h1><!-- //.logo -->
             <nav>
                 <ul class="gnb">
                     <li><a href="#">ABOUT</a></li>
