--- a/index.html
+++ b/index.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="스튜디오 드래곤 홈페이지 입니다">
+    <meta name="keywords" content="스튜디오드래곤, 드라마, 제작사, 기획사, CJENM, TVN, 넷플릭스">
+    <meta name="author" content="100SJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>studiodragon</title>
+    <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="back/css/reset.css">
+    <link rel="stylesheet" href="back/css/MainBeck_style.css">
+    <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script scr="back/js/MainBack.js"></script>
 </head>
+
 <body>
-    <p>화이팅...!</p>
-    <p>승주 머리가 빠가집니다...따흑</p>
-    <p>데브빙글빙글-새록-</p>
-    <p>i want go home</p>
-    <p>me too... so tired</p>
-    <p> 포켓몬스터 레전드 Z/A 10월 16일 발매</p>
-    <p><legend>kwon</legend></p>
-    <p>이거 진짜 어렵네 아오씨</p>
-    <p>hello</p>
+    <div class="wrap">
+        <header>
+            <div class="inner">
+                <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <nav>
+                    <ul class="gnb">
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">WORKS</a></li>
+                        <li><a href="#">NEWSROOM</a></li>
+                        <li><a href="#">IR</a></li>
+                        <li><a href="#">SUSTAINABILITY</a></li>
+                    </ul>
+                    <div class="right">
+                        <div class="lang">
+                            <a href="#" class="active">
+                                EN
+                            </a>
+                            <a href="#">
+                                KR
+                            </a>
+                        </div>
+                        <div class="user">
+                            <a href="#"><img src="back/img/user.png" alt="user"></a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </header>
+    </div>
 </body>
+
 </html>
