--- a/Work_Ryu/work.html
+++ b/Work_Ryu/work.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Glory - Studio Dragon</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="asset/css/reset.css">
+    <link rel="stylesheet" href="asset/css/work.css">
 </head>
-
 <body>
     <div class="wrap">
         <header>
@@ -18,10 +21,10 @@
             <nav>
                 <ul class="gnb">
                     <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">WORKS</a></li>
+                    <li><a href="#" class="active">WORKS</a></li>
                     <li><a href="#">NEWSROOM</a></li>
                     <li><a href="#">IR</a></li>
-                    <li><a href="#">SUSTANABILITY</a></li>
+                    <li><a href="#">SUSTAINABILITY</a></li>
                 </ul><!-- //.gnb -->
                 <div class="language">
                     <button type="button" class="on">EN</button>
@@ -624,5 +627,4 @@
         </footer>
     </div>
 </body>
-
 </html>
