--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav>
                     <ul class="gnb">
-                        <li><a href="#">ABOUT</a></li>
+                        <li class="on"><a href="#">ABOUT</a></li>
                         <li><a href="#">WORKS</a></li>
                         <li><a href="#">NEWSROOM</a></li>
                         <li><a href="#">IR</a></li>
