--- a/main_beck.html
+++ b/main_beck.html
@@ -24,7 +24,7 @@
                 <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav>
                     <ul class="gnb">
-                        <li><a href="#">ABOUT</a>
+                        <li class="on"><a href="#">ABOUT</a>
                             <ul class="sub" class="about_sub">
                                 <li><a href="#">About Us</a></li>
                                 <li><a href="#">Busines Ethics</a></li>
@@ -35,7 +35,7 @@
                             </ul>
                         </li>
                         <li><a href="#">WORKS</a>
-                            <ul class="sub">
+                            <ul class="sub w248">
                                 <li><a href="#">Production List</a></li>
                                 <li><a href="#">Viewer Participation</a></li>
                             </ul>
@@ -53,7 +53,7 @@
                             </ul>
                         </li>
                         <li><a href="#">SUSTAINABILITY</a>
-                            <ul class="sub">
+                            <ul class="sub w288">
                                 <li><a href="#">Sustainability Story</a></li>
                                 <li><a href="#">Sustainability Activities</a></li>
                                 <li><a href="#">Sustainability Report</a></li>
