--- a/Work_Ryu/work.html
+++ b/Work_Ryu/work.html
@@ -3,83 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Glory - Studio Dragon</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="asset/css/reset.css">
-    <link rel="stylesheet" href="asset/css/work.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="wrap">
         <header>
-            <div class="logo">
-                <a href="#">
-                    <img src="/asset/Studio Dragon_symbol.svg" alt="logo">
-                </a>
-            </div><!-- //.logo -->
-            <nav>
-                <ul class="gnb">
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#" class="active">WORKS</a></li>
-                    <li><a href="#">NEWSROOM</a></li>
-                    <li><a href="#">IR</a></li>
-                    <li><a href="#">SUSTAINABILITY</a></li>
-                </ul><!-- //.gnb -->
-                <div class="language">
-                    <button type="button" class="on">EN</button>
-                    <button type="button">KR</button>
-                </div>
-                <div class="mypage">
-                    <a href="#"><img src="/asset/icon_human.png" alt=""></a>
-                </div>
-            </nav>
+            <div class="contents">
+                <h1 class="logo">
+                    <a href="#">
+                        <img src="asset/Studio Dragon_symbol.svg" alt="logo">
+                    </a>
+                </h1><!-- //.logo -->
+                <nav>
+                    <ul class="gnb">
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">WORKS</a></li>
+                        <li><a href="#">NEWSROOM</a></li>
+                        <li><a href="#">IR</a></li>
+                        <li><a href="#">SUSTANABILITY</a></li>
+                    </ul><!-- //.gnb -->
+                    <div class="button">
+                        <div class="language">
+                            <button type="button" class="on">EN</button>
+                            <button type="button">KR</button>
+                        </div>
+                        <div class="mypage">
+                            <a href="#"><img src="asset/icon_human.png" alt=""></a>
+                        </div><!-- //.mypage -->
+                    </div><!-- //.button -->
+                </nav>
+            </div><!-- //.contents -->
         </header>
         <div class="inner">
             <div class="main_visual">
-                <div class="no_1">
-                    <img src="/asset/icon_netflix.svg" alt="">
-                    <p>Global No.1</p>
-                </div><!-- //.no.1 -->
-                <div class="tit">
-                    <div class="N_series">
-                        <p>NETFLIX Serise</p>
-                    </div><!-- //.N_series -->
-                    <div class="title">
-                        <h1>The Glory</h1>
-                        <div class="bookmark">
-                            <img src="/asset/icon_bookmark.svg" alt="">
-                        </div><!-- //.bookmark -->
-                    </div><!-- //.title -->
-                </div><!-- tit -->
-                <div class="txt_box">
-                    <div class="box1">
-                        <div class="info">
-                            <p>2022 | Revenge · Psychological thriller | 18+</p>
-                        </div><!-- //.info -->
-                        <div class="explain">
-                            <p>“WELCOME TO MY HELL”<br>
-                                Years after surviving horrific abuse in high school, a woman puts an elaborate<br>
-                                revenge scheme in motion to make the perpetrators pay for their crimes.
-                            </p>
-                        </div><!-- //.explain -->
-                    </div><!-- //.box1 -->
-                    <div class="box2">
-                        <div class="written">
-                            <em>Written</em>
-                            <span>Kim Eun-sook</span>
-                        </div><!-- //.written -->
-                        <div class="directed">
-                            <em>Directed</em>
-                            <span>Ahn Gil-ho</span>
-                        </div><!-- //.directed -->
-                        <div class="starring">
-                            <em>Starring</em>
-                            <span>Song Hye-kyo, Lee Do-hyun, Lim Ji-yeon, Yeom Hye-ran,<br>
-                                Park Sung-hoon, Jung Sung-il</span>
-                        </div><!-- //.written -->
-                    </div><!-- //.box2 -->
-                </div><!-- //.txt_box -->
+                <div class="con_area">
+                    <div class="no_1">
+                        <img src="../Work_Ryu/asset/icon_netflix.svg" alt="">
+                        <p>Global No.1</p>
+                    </div><!-- //.no.1 -->
+                    <div class="txt_area">
+                        <div class="tit">
+                            <div class="N_series">
+                                <p>NETFLIX Serise</p>
+                            </div><!-- //.N_series -->
+                            <div class="title">
+                                <h1>The Glory</h1>
+                                <div class="bookmark">
+                                    <img src="../Work_Ryu/asset/icon_bookmark.svg" alt="">
+                                </div><!-- //.bookmark -->
+                            </div><!-- //.title -->
+                        </div><!-- tit -->
+                        <div class="txt_box">
+                            <div class="box1">
+                                <div class="info">
+                                    <p>2022 | Revenge · Psychological thriller | 18+</p>
+                                </div><!-- //.info -->
+                                <div class="explain">
+                                    <p>“WELCOME TO MY HELL”<br>
+                                        Years after surviving horrific abuse in high school, a woman puts an elaborate<br>
+                                        revenge scheme in motion to make the perpetrators pay for their crimes.
+                                    </p>
+                                </div><!-- //.explain -->
+                            </div><!-- //.box1 -->
+                            <div class="box2">
+                                <div class="written">
+                                    <em>Written</em>
+                                    <span>Kim Eun-sook</span>
+                                </div><!-- //.written -->
+                                <div class="directed">
+                                    <em>Directed</em>
+                                    <span>Ahn Gil-ho</span>
+                                </div><!-- //.directed -->
+                                <div class="starring">
+                                    <em>Starring</em>
+                                    <span>Song Hye-kyo, Lee Do-hyun, Lim Ji-yeon, Yeom Hye-ran,<br>
+                                        Park Sung-hoon, Jung Sung-il</span>
+                                </div><!-- //.written -->
+                            </div><!-- //.box2 -->
+                        </div><!-- //.txt_box -->
+                    </div><!-- //.txt_area -->
+                </div><!-- //.con_area -->
             </div><!-- //.main_visual -->
             <section class="character">
                 <div class="tit">
