1920사이즈 헤더완성

--- a/main_beck.html
+++ b/main_beck.html
@@ -12,6 +12,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="back/css/reset.css">
     <link rel="stylesheet" href="back/css/MainBeck_style.css">
+    <link rel="stylesheet" href="back/css/main_media.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script scr="back/js/MainBack.js"></script>
@@ -24,8 +25,8 @@
                 <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav>
                     <ul class="gnb">
-                        <li class="on"><a href="#">ABOUT</a>
-                            <ul class="sub" class="about_sub">
+                        <li class=""><a href="#">ABOUT</a>
+                            <ul class="sub">
                                 <li><a href="#">About Us</a></li>
                                 <li><a href="#">Busines Ethics</a></li>
                                 <li><a href="#">PartnerShips</a></li>
@@ -35,7 +36,7 @@
                             </ul>
                         </li>
                         <li><a href="#">WORKS</a>
-                            <ul class="sub w248">
+                            <ul class="sub">
                                 <li><a href="#">Production List</a></li>
                                 <li><a href="#">Viewer Participation</a></li>
                             </ul>
@@ -53,7 +54,7 @@
                             </ul>
                         </li>
                         <li><a href="#">SUSTAINABILITY</a>
-                            <ul class="sub w288">
+                            <ul class="sub">
                                 <li><a href="#">Sustainability Story</a></li>
                                 <li><a href="#">Sustainability Activities</a></li>
                                 <li><a href="#">Sustainability Report</a></li>
