1920사이즈 헤더완성

--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
                                 <li><a href="#">Sustainability Report</a></li>
                             </ul>
                         </li>
-                    </ul>
+                    </ul><!-- //.gnb -->
                     <div class="right">
                         <div class="lang">
                             <a href="#">EN</a>
                             <a href="#">KR</a>
-                        </div>
+                        </div><!-- //.lang -->
                         <div class="user">
                             <a href="#"><img src="back/img/user.png" alt="user"></a>
-                        </div>
-                    </div>
+                        </div><!-- //.user -->
+                    </div><!-- //.right -->
                 </nav>
-            </div>
+            </div><!-- //.inner -->
         </header>
 
-    </div>
+    </div><!-- //.wrap -->
 </body>
 
 </html>
