--- a/index.html
+++ b/index.html
@@ -1,82 +1,90 @@
-<!DOCTYPE html>
-<html lang="ko">
+    <!DOCTYPE html>
+    <html lang="ko">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="스튜디오 드래곤 홈페이지 입니다">
-    <meta name="keywords" content="스튜디오드래곤, 드라마, 제작사, 기획사, CJENM, TVN, 넷플릭스">
-    <meta name="author" content="100SJ">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>studiodragon1</title>
-    <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="back/css/reset.css">
-    <link rel="stylesheet" href="back/css/MainBeck_style.css">
-    <link rel="stylesheet" href="back/css/main_media.css">
-    <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script scr="back/js/MainBack.js"></script>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="스튜디오 드래곤 홈페이지 입니다">
+        <meta name="keywords" content="스튜디오드래곤, 드라마, 제작사, 기획사, CJENM, TVN, 넷플릭스">
+        <meta name="author" content="100SJ">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>studiodragon</title>
+        <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="stylesheet" href="back/css/reset.css">
+        <link rel="stylesheet" href="././css/common.css">
+        <link rel="stylesheet" href="back/css/MainBeck_style.css">
+        <link rel="stylesheet" href="back/css/main_media.css">
+        <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="back/js/MainBack.js"></script>
+    </head>
 
-<body>
-    <div class="wrap">
-        <header>
-            <div class="inner">
-                <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
-                <nav>
-                    <ul class="gnb">
-                        <li class=""><a href="#">ABOUT</a>
-                            <ul class="sub">
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Busines Ethics</a></li>
-                                <li><a href="#">PartnerShips</a></li>
-                                <li><a href="#">History</a></li>
-                                <li><a href="#">CEO Message</a></li>
-                                <li><a href="#">Contact & Location</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">WORKS</a>
-                            <ul class="sub">
-                                <li><a href="#">Production List</a></li>
-                                <li><a href="#">Viewer Participation</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">NEWSROOM</a>
-                            <ul class="sub">
-                                <li><a href="#">Notice</a></li>
-                                <li><a href="#">News</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">IR</a>
-                            <ul class="sub">
-                                <li><a href="#">IR Insights</a></li>
-                                <li><a href="#">Materials</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">SUSTAINABILITY</a>
-                            <ul class="sub">
-                                <li><a href="#">Sustainability Story</a></li>
-                                <li><a href="#">Sustainability Activities</a></li>
-                                <li><a href="#">Sustainability Report</a></li>
-                                <li><a href="#">ESG Ratings</a></li>
-                                <li><a href="#">Sustainability Report</a></li>
-                            </ul>
-                        </li>
-                    </ul><!-- //.gnb -->
-                    <div class="right">
-                        <div class="lang">
-                            <a href="#">EN</a>
-                            <a href="#">KR</a>
-                        </div><!-- //.lang -->
-                        <div class="user">
-                            <a href="#"><img src="back/img/user.png" alt="user"></a>
-                        </div><!-- //.user -->
-                    </div><!-- //.right -->
-                </nav>
-            </div><!-- //.inner -->
-        </header>
+    <body>
+        <div class="wrap">
+            <header>
+                <div class="inner">
+                    <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                    <nav>
+                        <ul class="gnb">
+                            <li class=""><a href="#">ABOUT</a>
+                                <ul class="sub">
+                                    <li><a href="#">About Us</a></li>
+                                    <li><a href="#">Business Ethics</a></li>
+                                    <li><a href="#">Partnerships</a></li>
+                                    <li><a href="#">History</a></li>
+                                    <li><a href="#">CEO Message</a></li>
+                                    <li><a href="#">Contact & Location</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">WORKS</a>
+                                <ul class="sub">
+                                    <li><a href="#">Production List</a></li>
+                                    <li><a href="#">Viewer Participation</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">NEWSROOM</a>
+                                <ul class="sub">
+                                    <li><a href="#">Notice</a></li>
+                                    <li><a href="#">News</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">IR</a>
+                                <ul class="sub">
+                                    <li><a href="#">IR Insights</a></li>
+                                    <li><a href="#">Materials</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">SUSTAINABILITY</a>
+                                <ul class="sub">
+                                    <li><a href="#">Sustainability Story</a></li>
+                                    <li><a href="#">Sustainability Activities</a></li>
+                                    <li><a href="#">Sustainability Report</a></li>
+                                    <li><a href="#">ESG Ratings</a></li>
+                                    <li><a href="#">Sustainability Report</a></li>
+                                </ul>
+                            </li>
+                        </ul><!-- //.gnb -->
+                        <div class="right">
+                            <div class="lang">
+                                <a href="#">EN</a>
+                                <a href="#">KR</a>
+                            </div><!-- //.lang -->
+                            <div class="user">
+                                <a href="#"><img src="back/img/user.png" alt="user"></a>
+                            </div><!-- //.user -->
+                            <div class="ham">
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </div>
+                        </div><!-- //.right -->
+                    </nav>
+                </div><!-- //.inner -->
+            </header>
 
-    </div><!-- //.wrap -->
-</body>
+        </div><!-- //.wrap -->
+    </body>
 
-</html>
+    </html>
