인덱스 밀어버렷

--- a/main_beck.html
+++ b/main_beck.html
@@ -11,16 +11,19 @@
     <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="back/css/reset.css">
+    <link rel="stylesheet" href="././css/common.css">
     <link rel="stylesheet" href="back/css/MainBeck_style.css">
     <link rel="stylesheet" href="back/css/main_media.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script scr="back/js/MainBack.js"></script>
+    <script src="back/js/MainBack.js"></script>
 </head>
 
 <body>
     <div class="wrap">
-        <header>
+        <header class="">
+            <div class="header_bg">
+            </div>
             <div class="inner">
                 <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav>
@@ -28,8 +31,8 @@
                         <li class=""><a href="#">ABOUT</a>
                             <ul class="sub">
                                 <li><a href="#">About Us</a></li>
-                                <li><a href="#">Busines Ethics</a></li>
-                                <li><a href="#">PartnerShips</a></li>
+                                <li><a href="#">Business Ethics</a></li>
+                                <li><a href="#">Partnerships</a></li>
                                 <li><a href="#">History</a></li>
                                 <li><a href="#">CEO Message</a></li>
                                 <li><a href="#">Contact & Location</a></li>
@@ -62,21 +65,28 @@
                                 <li><a href="#">Sustainability Report</a></li>
                             </ul>
                         </li>
-                    </ul>
+                    </ul><!-- //.gnb -->
                     <div class="right">
                         <div class="lang">
                             <a href="#">EN</a>
                             <a href="#">KR</a>
-                        </div>
+                        </div><!-- //.lang -->
                         <div class="user">
                             <a href="#"><img src="back/img/user.png" alt="user"></a>
+                        </div><!-- //.user -->
+                        <div class="ham">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
                         </div>
-                    </div>
+                    </div><!-- //.right -->
                 </nav>
-            </div>
+            </div><!-- //.inner -->
         </header>
-
-    </div>
+        <main></main>
+    </div><!-- //.wrap -->
 </body>
 
 </html>
