--- a/viewer’splayground_moon.html
+++ b/viewer’splayground_moon.html
@@ -19,32 +19,69 @@
 </head>
 
 <body>
-    <header>
+    <header class="">
+        <div class="header_bg">
+        </div>
         <div class="inner">
-            <h1><a href="#" class="logo"><img src="./asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
+            <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
             <nav>
-                <ul>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">WORKS</a></li>
-                    <li><a href="#">NEWSROOM</a></li>
-                    <li><a href="#">IR</a></li>
-                    <li><a href="#">SUSTAINABILITY</a></li>
-                </ul>
+                <ul class="gnb">
+                    <li class=""><a href="#">ABOUT</a>
+                        <ul class="sub">
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Business Ethics</a></li>
+                            <li><a href="#">Partnerships</a></li>
+                            <li><a href="#">History</a></li>
+                            <li><a href="#">CEO Message</a></li>
+                            <li><a href="#">Contact & Location</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">WORKS</a>
+                        <ul class="sub">
+                            <li><a href="#">Production List</a></li>
+                            <li><a href="#">Viewer Participation</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">NEWSROOM</a>
+                        <ul class="sub">
+                            <li><a href="#">Notice</a></li>
+                            <li><a href="#">News</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">IR</a>
+                        <ul class="sub">
+                            <li><a href="#">IR Insights</a></li>
+                            <li><a href="#">Materials</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">SUSTAINABILITY</a>
+                        <ul class="sub">
+                            <li><a href="#">Sustainability Story</a></li>
+                            <li><a href="#">Sustainability Activities</a></li>
+                            <li><a href="#">Sustainability Report</a></li>
+                            <li><a href="#">ESG Ratings</a></li>
+                            <li><a href="#">Sustainability Report</a></li>
+                        </ul>
+                    </li>
+                </ul><!-- //.gnb -->
                 <div class="right">
                     <div class="lang">
-                        <a href="#">
-                            <div class="en">EN</div>
-                        </a>
-                        <a href="#">
-                            <div class="kr">KR</div>
-                        </a>
-                    </div>
+                        <a href="#">EN</a>
+                        <a href="#">KR</a>
+                    </div><!-- //.lang -->
                     <div class="user">
-                        <a href="#"><img src="./asset/user.png" alt="user"></a>
+                        <a href="#"><img src="back/img/user.png" alt="user"></a>
+                    </div><!-- //.user -->
+                    <div class="ham">
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
                     </div>
-                </div>
+                </div><!-- //.right -->
             </nav>
-        </div>
+        </div><!-- //.inner -->
     </header>
     <main>
         <section class="running-contest">
@@ -119,7 +156,7 @@
                     </p>
                 </div>
             </div>
-            <div class="inner">
+            <div class="wrap">
                 <div class="video-content-box">
                     <div class="blur-1"></div>
                     <div class="blur-2"></div>
@@ -272,7 +309,7 @@
         </section><!-- .contest-winner -->
     </main>
     <footer>
-        <div class="inner">
+        <div class="wrap">
             <div class="top">
                 <nav>
                     <a href="#">Home</a>
@@ -329,7 +366,7 @@
                     </div>
                 </div>
             </div>
-        </div><!-- .inner -->
+        </div><!-- .wrap -->
     </footer>
 </body>
 
