메인미디어이동및헤더완료

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="back/css/reset.css">
     <link rel="stylesheet" href="././css/common.css">
     <link rel="stylesheet" href="back/css/MainBeck_style.css">
-    <link rel="stylesheet" href="back/css/main_media.css">
+    <link rel="stylesheet" href="./css/main_media.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="back/js/MainBack.js"></script>
