--- a/Work_Ryu/work2.html
+++ b/Work_Ryu/work2.html
@@ -10,45 +10,81 @@
     <title>studiodragon</title>
     <link rel="shortcut icon" href="/back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"><!-- aos -->
-    <link rel="stylesheet" href="/back/css/reset.css">
-    <link rel="stylesheet" href="/css/common_copt.css">
-    <!--  <link rel="stylesheet" href="css/common.css"> --> <!-- 본인 css -->
-    <!--  <link rel="stylesheet" href="css/main.css"> --><!-- 본인 css -->
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/main_media.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="css/work_main.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script scr="/js/common.js"></script>
-</head>
-
+    <script src="/js/common.js"></script>
 </head>
 
 <body class="dark">
     <div class="wrap">
-        <header>
-            <div class="contents">
-                <h1 class="logo">
-                    <a href="#">
-                        <img src="asset/Studio Dragon_symbol.svg" alt="logo">
-                    </a>
-                </h1><!-- //.logo -->
+         <div class="wrap">
+        <header class="">
+            <div class="header_bg">
+            </div>
+            <div class="inner">
+                <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav>
                     <ul class="gnb">
-                        <li><a href="#">ABOUT</a></li>
-                        <li><a href="#">WORKS</a></li>
-                        <li><a href="#">NEWSROOM</a></li>
-                        <li><a href="#">IR</a></li>
-                        <li><a href="#">SUSTANABILITY</a></li>
+                        <li class=""><a href="#">ABOUT</a>
+                            <ul class="sub">
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Business Ethics</a></li>
+                                <li><a href="#">Partnerships</a></li>
+                                <li><a href="#">History</a></li>
+                                <li><a href="#">CEO Message</a></li>
+                                <li><a href="#">Contact & Location</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">WORKS</a>
+                            <ul class="sub">
+                                <li><a href="#">Production List</a></li>
+                                <li><a href="#">Viewer Participation</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">NEWSROOM</a>
+                            <ul class="sub">
+                                <li><a href="#">Notice</a></li>
+                                <li><a href="#">News</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">IR</a>
+                            <ul class="sub">
+                                <li><a href="#">IR Insights</a></li>
+                                <li><a href="#">Materials</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">SUSTAINABILITY</a>
+                            <ul class="sub">
+                                <li><a href="#">Sustainability Story</a></li>
+                                <li><a href="#">Sustainability Activities</a></li>
+                                <li><a href="#">Sustainability Report</a></li>
+                                <li><a href="#">ESG Ratings</a></li>
+                                <li><a href="#">Sustainability Report</a></li>
+                            </ul>
+                        </li>
                     </ul><!-- //.gnb -->
-                    <div class="button">
-                        <div class="language">
-                            <button type="button" class="on">EN</button>
-                            <button type="button">KR</button>
+                    <div class="right">
+                        <div class="lang">
+                            <a href="#">EN</a>
+                            <a href="#">KR</a>
+                        </div><!-- //.lang -->
+                        <div class="user">
+                            <a href="#"><img src="back/img/user.png" alt="user"></a>
+                        </div><!-- //.user -->
+                        <div class="ham">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
                         </div>
-                        <div class="mypage">
-                            <a href="#"><img src="asset/icon_human.png" alt=""></a>
-                        </div><!-- //.mypage -->
-                    </div><!-- //.button -->
+                    </div><!-- //.right -->
                 </nav>
-            </div><!-- //.contents -->
+            </div><!-- //.inner -->
         </header>
         <div class="inner">
             <div class="main_visual">
