--- a/Work_Ryu/work2.html
+++ b/Work_Ryu/work2.html
@@ -685,8 +685,7 @@
 
                     <div class="footer_info">
                         <p class="footer_info_text">CEO : Jang Kyung-ik</p>
-                        <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu, Seoul,
-                            Republic of Korea | Business registration number : 747-81-00388</p>
+                        <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu, Seoul, Republic of Korea | Business registration number : 747-81-00388</p>
                         <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
                     </div><!-- //.footer_info -->
                 </div><!-- //.footer_bottom -->
