--- a/Work_Ryu/work2.html
+++ b/Work_Ryu/work2.html
@@ -26,7 +26,7 @@
             <div class="header_bg">
             </div>
             <div class="inner">
-                <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <h1><a href="#" class="logo"><img src="/asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav>
                     <ul class="gnb">
                         <li class=""><a href="#">ABOUT</a>
