--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <title>studiodragon</title>
     <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="back/css/MainBeck_style.css">
-    <link rel="stylesheet" href="./css/main_media.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/main_media.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="back/js/MainBack.js"></script>
+    <script src="js/common.js"></script>
 </head>
 
 <body>
@@ -25,7 +24,7 @@
             <div class="header_bg">
             </div>
             <div class="inner">
-                <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <h1><a href="#" class="logo"><img src="asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav>
                     <ul class="gnb">
                         <li class=""><a href="#">ABOUT</a>
@@ -72,7 +71,7 @@
                             <a href="#">KR</a>
                         </div><!-- //.lang -->
                         <div class="user">
-                            <a href="#"><img src="back/img/user.png" alt="user"></a>
+                            <a href="#"><img src="asset/user.png" alt="user"></a>
                         </div><!-- //.user -->
                         <div class="ham">
                             <ul>
@@ -104,7 +103,7 @@
                                 <div class="footer_family_site">
                                     <button type="button" class="family_site_btn">
                                         <span>Family Site</span>
-                                        <img src="https://www.figma.com/api/mcp/asset/197702ac-94a3-4f96-8d2d-799feadd2429"
+                                        <img src="asset/up.svg"
                                             alt="arrow" class="family_site_arrow">
                                     </button>
                                     <ul class="family_site_list">
@@ -121,21 +120,21 @@
                 <div class="footer_bottom">
                     <div class="footer_brand">
                         <div class="footer_logo">
-                            <img src="./asset/Studio Dragon_symbol.svg"
+                            <img src="asset/logo_w.png"
                                 alt="Studio Dragon">
                         </div><!-- //.footer_logo -->
 
                         <div class="footer_sns">
                             <a href="#" class="sns_link" aria-label="Facebook">
-                                <img src="https://www.figma.com/api/mcp/asset/5800100e-1025-4331-93b9-282625c7d4cb"
+                                <img src="asset/facebook.svg"
                                     alt="Facebook">
                             </a>
                             <a href="#" class="sns_link" aria-label="YouTube">
-                                <img src="https://www.figma.com/api/mcp/asset/be09f0e9-409a-4ee6-a049-4c9ae3290332"
+                                <img src="asset/youtube.svg"
                                     alt="YouTube">
                             </a>
                             <a href="#" class="sns_link" aria-label="Instagram">
-                                <img src="https://www.figma.com/api/mcp/asset/407868c3-bc59-4607-af72-b9d6ef547455"
+                                <img src="asset/Instagram.svg"
                                     alt="Instagram">
                             </a>
                         </div><!-- //.footer_sns -->
