--- a/IR_Kwon/IR.html
+++ b/IR_Kwon/IR.html
@@ -15,7 +15,102 @@
 </style>
 </head>
 <body>
-
+<main>
+  <section class="value_drivers">
+    <header class="header">
+      <h2 class="title">Value Drivers</h2>
+      <p class="sub">Strategic transitions that strengthen production, marketing and distribution.</p>
+    </header><!-- //. header -->
+    <div class="container">
+      <figure class="figure">
+        <img class="img" src="./img/Value_Drivers_Img.png" alt="Value Drivers" />
+      </figure><!-- //. figure -->
+      <div class="area">
+        <article class="item item_1">
+          <div class="card card_before">
+            <span class="label">Before</span>
+            <p class="text">Saturated weekend slot</p>
+          </div><!-- //. card_before -->
+          <span class="arrow">→</span>
+          <div class="card card_after">
+            <span class="label">After</span>
+            <p class="text">Flexible multi-platform rollout</p>
+          </div><!-- //. card_after -->
+        </article><!-- //. item_1 -->
+        <article class="item item_2">
+          <div class="card card_before">
+            <span class="label">Before</span>
+            <p class="text">Fragmented marketing</p>
+          </div><!-- //. card_before -->
+          <span class="arrow">→</span>
+          <div class="card card_after">
+            <span class="label">After</span>
+            <p class="text">Global simultaneous campaign</p>
+          </div><!-- //. card_after -->
+        </article><!-- //. item_2 -->
+        <article class="item item_3">
+          <div class="card card_before">
+            <span class="label">Before</span>
+            <p class="text">Sequential production workflow</p>
+          </div><!-- //. card_before -->
+          <span class="arrow">→</span>
+          <div class="card card_after">
+            <span class="label">After</span>
+            <p class="text">Parallel prod–post workflow</p>
+          </div><!-- //. card_after -->
+        </article><!-- //. item_3 -->
+      </div><!-- //. area -->
+      <aside class="description">
+        <p>Multi-platform launch windows reduce slot congestion and improve reach efficiency.</p>
+        <p>Parallelization shortens turnaround and mitigates schedule risk.</p>
+      </aside><!-- //. description -->
+    </div><!-- //. container -->
+  </section><!-- //. value_drivers -->
+  <section class="execution">
+    <header class="header">
+      <h2 class="title">Execution</h2>
+      <p class="sub">Operational playbooks aligned to global releases.</p>
+    </header><!-- //. header -->
+    <div class="container">
+      <article class="card card_1">
+        <figure class="figure">
+          <img class="img" src="./img/Execution_Pro.png" alt="Production" />
+        </figure><!-- //. figure -->
+        <div class="content">
+          <h3 class="card_title">Production</h3>
+          <p class="card_desc">High-quality sets, locations, OST → higher completion rate</p>
+        </div><!-- //. content -->
+      </article><!-- //. card_1 -->
+      <article class="card card_2">
+        <figure class="figure">
+          <img class="img" src="./img/Execution_Dis.png" alt="Distribution" />
+        </figure><!-- //. figure -->
+        <div class="content">
+          <h3 class="card_title">Distribution</h3>
+          <p class="card_desc">Regional pacing + highlight drops → more Top-10 weeks</p>
+        </div><!-- //. content -->
+      </article><!-- //. card_2 -->
+      <article class="card card_3">
+        <figure class="figure">
+          <img class="img" src="./img/Execution_Par.png" alt="Partners" />
+        </figure><!-- //. figure -->
+        <div class="content">
+          <h3 class="card_title">Partners</h3>
+          <p class="card_desc">OTT main features &amp; brand tie-ups</p>
+        </div><!-- //. content -->
+      </article><!-- //. card_3 -->
+      <article class="card card_4">
+        <figure class="figure">
+          <img class="img" src="./img/Execution_Mar.png" alt="Marketing" />
+        </figure><!-- //. figure -->
+        <div class="content">
+          <h3 class="card_title">Marketing</h3>
+          <p class="card_desc">Key visual A/B + fan AMA → play-through lift</p>
+        </div><!-- //. content -->
+      </article><!-- //. card_4 -->
+    </div><!-- //. container -->
+  </section><!-- //. execution -->
+</main>
 
 </body>
 </html>
