--- a/main_beck.html
+++ b/main_beck.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/main_media.css">
+    <link rel="stylesheet" href="back/css/MainBeck_style.css">
+    <link rel="stylesheet" href="back/css/MainBack_media.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/common.js"></script>
@@ -84,7 +86,39 @@
                 </nav>
             </div><!-- //.inner -->
         </header>
-        <main></main>
+
+
+        <main>
+            <div class="circlebody">
+                <section id="circle">
+                    <article class="face1">
+                        <div class="poster"><img src="./back/img/img01.webp" alt="The Glory"></div>
+                    </article>
+                    <article class="face2">
+                        <div class="poster"><img src="./back/img/img02.webp" alt="Queen of Tears"></div>
+                    </article>
+                    <article class="face3">
+                        <div class="poster"><img src="./back/img/img03.webp" alt="Celebrity"></div>
+                    </article>
+                    <article class="face4">
+                        <div class="poster"><img src="./back/img/img04.webp" alt="Sweet Home"></div>
+                    </article>
+                    <article class="face5">
+                        <div class="poster"><img src="./back/img/img05.webp" alt="Guardian"></div>
+                    </article>
+                    <article class="face6">
+                        <div class="poster"><img src="./back/img/img06.webp" alt="Bon Appétit, Your Majesty"></div>
+                    </article>
+                    <article class="face7">
+                        <div class="poster"><img src="./back/img/img07.webp" alt="Genie, Make a Wish"></div>
+                    </article>
+                    <article class="face8">
+                        <div class="poster"><img src="./back/img/img08.webp" alt="Jeongnyeon: The Star Is Born"></div>
+                    </article>
+                </section>
+            </div><!-- //.wrap -->
+
+        </main>
     </div><!-- //.wrap -->
 </body>
 
