--- a/IR_Kwon/IR.html
+++ b/IR_Kwon/IR.html
@@ -1,26 +1,96 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-  <meta charset="UTF-8">
-    <meta name="description" content="IR(Investor Relations) 페이지 입니다">
-    <meta name="keywords" content="IR, 투자자, 스튜디오드래곤, 재무정보, 주가정보, 공시정보, 배당정보">
-    <meta name="author" content="kwonmyungjin">
+    <meta charset="UTF-8">
+    <meta name="description" content="스튜디오 드래곤 홈페이지 입니다">
+    <meta name="keywords" content="스튜디오드래곤, 드라마, 제작사, 기획사, CJENM, TVN, 넷플릭스">
+    <meta name="author" content="100SJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IR</title>
-  <link rel="stylesheet" href="./css/main_style.css">
-  <link rel="stylesheet" href="../css/common.css">
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./js/main.js">
-  <style>
-</style>
+    <title>studiodragon</title>
+    <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/main_media.css">
+    <link rel="stylesheet" href="./css/main_style.css">
+    <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="/js/common.js"></script>
 </head>
+
 <body>
-<main>
-  <section class="value_drivers">
-    <header class="header">
+    <div class="wrap">
+        <header class="">
+            <div class="header_bg">
+            </div>
+            <div class="inner">
+                <h1><a href="#" class="logo"><img src="/asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <nav>
+                    <ul class="gnb">
+                        <li class=""><a href="#">ABOUT</a>
+                            <ul class="sub">
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Business Ethics</a></li>
+                                <li><a href="#">Partnerships</a></li>
+                                <li><a href="#">History</a></li>
+                                <li><a href="#">CEO Message</a></li>
+                                <li><a href="#">Contact & Location</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">WORKS</a>
+                            <ul class="sub">
+                                <li><a href="#">Production List</a></li>
+                                <li><a href="#">Viewer Participation</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">NEWSROOM</a>
+                            <ul class="sub">
+                                <li><a href="#">Notice</a></li>
+                                <li><a href="#">News</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">IR</a>
+                            <ul class="sub">
+                                <li><a href="#">IR Insights</a></li>
+                                <li><a href="#">Materials</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">SUSTAINABILITY</a>
+                            <ul class="sub">
+                                <li><a href="#">Sustainability Story</a></li>
+                                <li><a href="#">Sustainability Activities</a></li>
+                                <li><a href="#">Sustainability Report</a></li>
+                                <li><a href="#">ESG Ratings</a></li>
+                                <li><a href="#">Sustainability Report</a></li>
+                            </ul>
+                        </li>
+                    </ul><!-- //.gnb -->
+                    <div class="right">
+                        <div class="lang">
+                            <a href="#">EN</a>
+                            <a href="#">KR</a>
+                        </div><!-- //.lang -->
+                        <div class="user">
+                            <a href="#"><img src="/asset/user.png" alt="user"></a>
+                        </div><!-- //.user -->
+                        <div class="ham">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </div>
+                    </div><!-- //.right -->
+                </nav>
+            </div><!-- //.inner -->
+        </header>
+        <main>  
+          <section class="value_drivers">
+    <div class="title">
       <h2 class="title">Value Drivers</h2>
       <p class="sub">Strategic transitions that strengthen production, marketing and distribution.</p>
-    </header><!-- //. header -->
+    </div><!-- //. title -->
     <div class="container">
       <figure class="figure">
         <img class="img" src="./img/Value_Drivers_Img.png" alt="Value Drivers" />
@@ -67,10 +137,10 @@
     </div><!-- //. container -->
   </section><!-- //. value_drivers -->
   <section class="execution">
-    <header class="header">
+    <div class="title">
       <h2 class="title">Execution</h2>
       <p class="sub">Operational playbooks aligned to global releases.</p>
-    </header><!-- //. header -->
+    </div><!-- //. title -->
     <div class="container">
       <article class="card card_1">
         <figure class="figure">
@@ -110,7 +180,71 @@
       </article><!-- //. card_4 -->
     </div><!-- //. container -->
   </section><!-- //. execution -->
-</main>
+  </main>
+        <footer class="footer">
+            <div class="footer_inner">
+                <!-- Top Area -->
+                <div class="footer_top">
+                    <div class="footer_menu">
+                        <div class="footer_gnb">
+                            <a href="#" class="footer_gnb_link home">Home</a>
+                            <div class="footer_gnb_wrap">
+                                <ul class="footer_gnb_list">
+                                    <li><a href="#" class="footer_gnb_link">Hotline</a></li>
+                                    <li><a href="#" class="footer_gnb_link">Recruitment</a></li>
+                                    <li><a href="#" class="footer_gnb_link">Contact Us</a></li>
+                                    <li><a href="#" class="footer_gnb_link">Sitemap</a></li>
+                                </ul><!-- //.footer_gnb_list -->
 
+                                <div class="footer_family_site">
+                                    <button type="button" class="family_site_btn">
+                                        <span>Family Site</span>
+                                        <img src="asset/up.svg"
+                                            alt="arrow" class="family_site_arrow">
+                                    </button>
+                                    <ul class="family_site_list">
+                                        <li><a href="#" class="family_site_link">CJ ENM</a></li>
+                                        <li><a href="#" class="family_site_link">CJ GROUP</a></li>
+                                    </ul><!-- //.family_site_list -->
+                                </div><!-- //.footer_family_site -->
+                            </div><!-- //.footer_gnb_wrap -->
+                        </div><!-- //.footer_gnb -->
+                    </div><!-- //.footer_menu -->
+                </div><!-- //.footer_top -->
+
+                <!-- Bottom Area -->
+                <div class="footer_bottom">
+                    <div class="footer_brand">
+                        <div class="footer_logo">
+                            <img src="asset/logo_w.png"
+                                alt="Studio Dragon">
+                        </div><!-- //.footer_logo -->
+
+                        <div class="footer_sns">
+                            <a href="#" class="sns_link" aria-label="Facebook">
+                                <img src="asset/facebook.svg"
+                                    alt="Facebook">
+                            </a>
+                            <a href="#" class="sns_link" aria-label="YouTube">
+                                <img src="asset/youtube.svg"
+                                    alt="YouTube">
+                            </a>
+                            <a href="#" class="sns_link" aria-label="Instagram">
+                                <img src="asset/Instagram.svg"
+                                    alt="Instagram">
+                            </a>
+                        </div><!-- //.footer_sns -->
+                    </div><!-- //.footer_brand -->
+
+                    <div class="footer_info">
+                        <p class="footer_info_text">CEO : Jang Kyung-ik</p>
+                        <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu, Seoul, Republic of Korea | Business registration number : 747-81-00388</p>
+                        <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
+                    </div><!-- //.footer_info -->
+                </div><!-- //.footer_bottom -->
+            </div><!-- //.footer_inner -->
+        </footer><!-- //.footer -->
+    </div><!-- //.wrap -->
 </body>
+
 </html>
